--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
